--- a/index.html
+++ b/index.html
@@ -32,17 +32,21 @@ A qui le tour ?<br>
     
   </div>
 
+<!-- Default Statcounter code for Test
+https://julielemaire62.github.io/Julie_Lemaire_62/ -->
 <script type="text/javascript">
-var sc_project=13155471; 
+var sc_project=13170753; 
 var sc_invisible=1; 
-var sc_security="4b223580"; 
+var sc_security="98918300"; 
 </script>
 <script type="text/javascript"
 src="https://www.statcounter.com/counter/counter.js" async></script>
 <noscript><div class="statcounter"><a title="Web Analytics"
 href="https://statcounter.com/" target="_blank"><img class="statcounter"
-src="https://c.statcounter.com/13155471/0/4b223580/1/" alt="Web Analytics"
+src="https://c.statcounter.com/13170753/0/98918300/1/" alt="Web Analytics"
 referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+<!-- End of Statcounter Code -->
 
   </body>
 </html>
+
